# ProjectRepository

./: .gitignore  BeginningCode.py  CHANGELOG.md  FinalSubmission.py  FinalSubmissionAcoustic.spec  MiddleCode.py  MiddleCodeConversion.py  MiddleCodeDebugless.py  MiddleCodeHalfDisplay  MiddleCodeHalfDisplay.py  MiddleCodeUpdated.py  NearEndCode.py  README.md  Reset.py  gui.py  primary.py  primary_debugless.py  pyproject.toml  requirements  sractch.py
Coding Files/: MiddleCode.py  MiddleCodeHalfDisplay.py
Original Code/: BeginningCode.py  MiddleCodeHalfDisplay
