[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Acoustics Project"
version = "0.1.0"
authors = [
  { name="Logan Parlato", email="lparlato5214@floridapoly.edu" },
]
description = "Half-baked acoustics program"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "pip install pydub",
    "pip install ffmpeg"
]

[project.urls]
Homepage = "https://github.com/xSNEEDSx/ProjectRepository"
Issues = "https://github.com/xSNEEDSx/ProjectRepository/issues"
